[package]
name = "assembly"
version = "0.1.0"
authors = ["zhangzhongming <zhangzhongming@baidu.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
image = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
